2003-11-04  Gary Thomas  <gary@mlbassoc.com>

	* src/flash.c (find_free): Better handling of end address - otherwise
	list of free blocks could be incorrect.  Thanks to Chris Garry.

2003-11-01  Gary Thomas  <gary@mlbassoc.com>

	* cdl/redboot.cdl: Reorg to allow disk operations on other than
	IDE drives.

2003-10-23  Gary Thomas  <gary@mlbassoc.com>

	* src/main.c (cyg_start): Try to catch illegal memory accesses and
	other abort conditions during command execution.

2003-10-17  Gary Thomas  <gary@mlbassoc.com>

	* src/load.c: Only examine loadable segments when scanning to determine
	lowest loadable address (only used when -b XXX option used).  Otherwise,
	an offset into space could be chosen.

2003-10-16  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/redboot_installing.sgml: Fix eb40 flash install instructions.

2003-10-15  Gary Thomas  <gary@mlbassoc.com>

	* src/flash.c: 
	* src/fconfig.c: Better handling of layout of fconfig and fis
	data within the FLASH.  Should work for even flash devices with
	very smal block sizes.

	* include/redboot.h (RedBoot_INIT_SECOND): 
	Finer initialization control.

	* cdl/redboot.cdl: Combine FIS directory and FCONFIG database
	by default.  This results in better FLASH utilization. Also define
	number of FIS directory slots.  This will allow support for FLASH
	devices with very small block sizes.

2003-10-12  Gary Thomas  <gary@mlbassoc.com>

	* src/flash.c (fis_create): Verify that any hard FLASH addresses
	(given via -f XXX) are known to be free.

2003-10-11  Gary Thomas  <gary@mlbassoc.com>

	* src/flash.c: 
	* cdl/redboot.cdl: Change 'fis free' to use the directory structure
	to determine what space is free in the FLASH.  This is controlled 
	by the CDL option CYGDAT_REDBOOT_FIS_MAX_FREE_CHUNKS so the old
	behaviour can still be defined if desired.

2003-10-09  Gary Thomas  <gary@mlbassoc.com>

	* src/flash.c (fis_create): Check whole length of image, not just 
	effective size, when validating addresses.
